e2.txt
Compiled with problems:
×
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\Administrador\fishingstats\src\App.js: Unexpected token (362:36)

  360 |                                 const tooltipContent = `<div style="text-align: center; padding: 5px; font-family: monospace;">...</div>`; // (Conteúdo igual ao do PlayerCard)
  361 |                                 return (
> 362 |                                     const badgeExtension = badge.code.endsWith('.gif') ? '.gif' : '.png';
      |                                     ^
  363 |                         const tooltipContent = `<div style="text-align: center; padding: 5px; font-family: monospace;">
  364 |                             <img src="/img/badges/${badge.code}${badgeExtension}" alt="${badge.code}" style="width: 48px; height: 48px; margin: 0 auto 8px; image-rendering: pixelated; background: #332216; border-radius: 5px;" />
  365 |                             <strong style="display: block; color: #ffd27f;">${badge.code}</strong>
    at constructor (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:360:19)
    at FlowParserMixin.raise (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:6613:19)
    at FlowParserMixin.unexpected (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:6633:16)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11358:16)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:4770:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10992:23)
    at FlowParserMixin.parseUpdate (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10977:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10957:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10810:61)
    at FlowParserMixin.parseExprOps (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10815:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10792:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10745:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:3555:18)
    at C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10714:39
    at FlowParserMixin.allowInAnd (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12334:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10714:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11591:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:3597:18)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11242:23)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:4770:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10992:23)
    at FlowParserMixin.parseUpdate (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10977:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10957:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10810:61)
    at FlowParserMixin.parseExprOps (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10815:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10792:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10745:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:3555:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10698:23)
    at C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10694:39
    at FlowParserMixin.allowInAnd (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12329:16)
    at FlowParserMixin.parseExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10694:17)
    at FlowParserMixin.parseReturnStatement (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:13018:28)
    at FlowParserMixin.parseStatementContent (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12675:21)
    at FlowParserMixin.parseStatementLike (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12644:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:2922:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12624:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:13192:61)
    at FlowParserMixin.parseBlockBody (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:13185:10)
    at FlowParserMixin.parseBlock (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:13173:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:12018:24)
    at C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:2896:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:3072:16)
    at FlowParserMixin.parseFunctionBody (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:2896:12)
    at FlowParserMixin.parseArrowExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11993:10)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11603:12)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:3597:18)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:11242:23)
    at FlowParserMixin.parseExprAtom (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:4770:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Administrador\fishingstats\node_modules\@babel\parser\lib\index.js:10992:23)
ERROR
[eslint] 
src\App.js
  Line 362:36:  Parsing error: Unexpected token (362:36)
